--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+                "browserTarget": "prj-user-admin:build",
+                "proxyConfig": "proxy.conf.json"
+              },
           "configurations": {
             "production": {
               "browserTarget": "prj-user-admin:build:production"
